--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "ureshii-api",
   "version": "1.0.0",
-  "main": "api/index.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node api/index.js"
+    "start": "node index.js"
   },
   "dependencies": {
     "express": "^4.18.2",
