--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "axios": "^1.4.0",
     "cheerio": "^1.0.0-rc.12",
     "@google/generative-ai": "^0.21.0",          
-    "swagger-ui-express": "^4.6.0"
+    "form-data": "^4.0.0",
+    "node-fetch": "^3.3.1",            
+    "file-type": "^18.5.0",            
+    "swagger-ui-express": "^4.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
