--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@google/generative-ai": "^0.21.0",          
     "form-data": "^4.0.0",
     "node-fetch": "^3.3.1",            
+    "mime-types": "^2.1.35",            
     "file-type": "^18.5.0",            
     "swagger-ui-express": "^4.3.0"
   },
